--- a/crmapp/frontend/src/app/components/main-page/main-page.component.html
+++ b/crmapp/frontend/src/app/components/main-page/main-page.component.html
@@ -17,7 +17,7 @@
           class="ui-button-success btn-block"
           [routerLink]="[category.routerLink]" style="margin-top:4px;margin-bottom:4px">
         </button>
-        <button pButton type="button" icon="fa-plus" label="Добавить"
+        <button pButton type="button" icon="fa-plus" label="Добавить"j
           class="ui-button-primary btn-block"
           [routerLink]="[category.routerLink, 'add']" style="margin-top:4px;margin-bottom:4px">
         </button>
