--- a/crmapp/frontend/src/app/components/client/client-details/client-details.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details.component.html
@@ -1,15 +1,8 @@
-<p-sidebar [(visible)]="display" [baseZIndex]="10000">
-	<h4 style="font-weight:normal">
-		Главное меню
-	</h4>
-	<app-dashboard-menu></app-dashboard-menu>
-</p-sidebar>
-
 <div class="ui-g">
 	<div class="ui-g-4">
-		<button pButton type="button" (click)="display = true" icon="fa-bars"></button>
 		<button pButton type="button" label="Вернуться" class="ui-button-info"
-			icon="fa-arrow-circle-o-left" routerLink="../"></button>
+			icon="fa-arrow-circle-o-left" routerLink="../">
+		</button>
 	</div>
 	<div class="ui-g-8">
 		<h4 style="font-weight:normal">
