FE: new property (@Input('enabled'))

--- a/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
+++ b/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
@@ -60,5 +60,5 @@
 </p-panel>
 
 <ng-template #loadingStatus>
-    <app-loading-status></app-loading-status>
+    <app-loading-status enabled="true"></app-loading-status>
 </ng-template> 
