--- a/crmapp/frontend/src/app/components/mail-output/mail-outputs/mail-outputs.component.html
+++ b/crmapp/frontend/src/app/components/mail-output/mail-outputs/mail-outputs.component.html
@@ -1,3 +1,100 @@
-<p>
-  mail-outputs works!
-</p>
+<p-table [columns]="columns" [value]="outputs" selectionMode="single" [(selection)]="selectedOutput" 
+  (onRowSelect)="onRowSelect($event)" [paginator]="false" [rows]="15">
+  <ng-template pTemplate="header" let-columns>
+      <tr>
+          <th *ngFor="let col of columns">
+              {{col.header}}
+          </th>
+      </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-rowData let-columns="columns">
+      <tr [pSelectableRow]="rowData">
+          <td *ngFor="let col of columns">
+              {{rowData[col.field]}}
+          </td>
+      </tr>
+  </ng-template>
+
+  <ng-template pTemplate="summary" let-rowData>
+      <div style="text-align:left">
+          <button type="button" pButton icon="fa-plus" (click)="showDialogToAdd()" label="Add"></button>
+      </div>
+  </ng-template>
+  
+</p-table>
+
+<p-dialog header="MailOutput Details" [(visible)]="displayDialog" [responsive]="true" 
+  showEffect="fade" [modal]="true" [width]="600" [autoAlign]="true" [height]="500">
+  <div class="ui-g ui-fluid" *ngIf="mailOutput">
+      <div class="ui-g-12">
+          <div class="ui-g-4">
+              <label for="number">Номер</label>
+          </div>
+          <div class="ui-g-8">
+              <input pInputText id="number" [(ngModel)]="mailOutput.number" />
+          </div>
+      </div>
+      <div class="ui-g-12">
+          <div class="ui-g-4">
+              <label for="receiver">Получатель</label>
+          </div>
+          <div class="ui-g-8">
+              <input pInputText id="receiver" [(ngModel)]="mailOutput.receiver" />
+          </div>
+      </div>
+    <!-- <ng-template pTemplate="date"> -->
+        <div class="ui-g-12">
+            <div class="ui-g-4">
+                <label for="dated">Дата</label>
+            </div>
+            <div class="ui-g-5">
+                    <!-- <ng-template pTemplate="date"> -->
+                    <p-calendar [(ngModel)]="date10">
+                            <ng-template pTemplate="date" let-date>
+                                <span [ngStyle]="{backgroundColor: (date.day < 21 && date.day > 10) ? '#7cc67c' : 'inherit'}" style="border-radius:50%">{{date.day}}</span>
+                            </ng-template>
+                        </p-calendar>
+                    <!-- <p-calendar [(ngModel)]="mailOutput.dated" name="dated" placeholder="Дата"
+                        [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru"
+                        showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy" id="dated" [appendTo]="date">
+                        
+                    </p-calendar> -->
+                <!-- <input pInputText id="dated" [(ngModel)]="mailOutput.dated" /> -->
+            <!-- </ng-template> -->
+            </div>
+        </div>
+      <!-- </ng-template> -->
+      <div class="ui-g-12">
+          <div class="ui-g-4">
+              <label for="docTypeTitle">Документ</label>
+          </div>
+          <div class="ui-g-8">
+              <p-dropdown [options]="docTypes" [(ngModel)]="mailOutput.docType" 
+                name="docType" filter="false" optionLabel="title" 
+                [autoWidth]="false" placeholder="...">
+            </p-dropdown>
+          </div>
+      </div>
+  </div>
+  <!-- <p-footer> -->
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button type="button" pButton icon="fa-trash" class="ui-button-danger" 
+            (click)="delete()" label="Удалить">
+        </button>
+        <button type="button" pButton icon="fa-close" class="ui-button-secondary" 
+            (click)="displayDialog=false" label="Закрыть">
+        </button>
+        <button type="button" pButton icon="fa-check" class="ui-button-success" 
+            (click)="save()" label="Сохранить">
+        </button>
+      </div>
+  <!-- </p-footer> -->
+</p-dialog>
+
+<!-- <app-dashboard-table [title]="['Исходящие номера']" 
+    [columns]="columns" [datasource]="outputs" 
+    [responsive]="true" [reorderableColumns]="true" 
+    [rows]="0" [paginator]="false" [rowHover]="true" 
+    [loading]="false" [menuModel]="items" 
+    >
+</app-dashboard-table> -->
