--- a/crmapp/frontend/src/app/components/mail-output/mail-outputs/mail-outputs.component.html
+++ b/crmapp/frontend/src/app/components/mail-output/mail-outputs/mail-outputs.component.html
@@ -1,86 +1,86 @@
 <p-table [columns]="columns" [value]="outputs" selectionMode="single" [(selection)]="selectedOutput" 
-  (onRowSelect)="onRowSelect($event)" [paginator]="false" [rows]="15">
-  <ng-template pTemplate="header" let-columns>
-      <tr>
-          <th *ngFor="let col of columns">
-              {{col.header}}
-          </th>
-      </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-rowData let-columns="columns">
-      <tr [pSelectableRow]="rowData">
-          <td *ngFor="let col of columns">
-              {{rowData[col.field]}}
-          </td>
-      </tr>
-  </ng-template>
+    (onRowSelect)="onRowSelect($event)" [paginator]="false" [rows]="15">
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let col of columns">
+                {{col.header}}
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+            <td *ngFor="let col of columns">
+                {{rowData[col.field]}}
+            </td>
+        </tr>
+    </ng-template>
 
-  <ng-template pTemplate="summary" let-rowData>
-      <div style="text-align:left">
-          <button type="button" pButton icon="fa-plus" (click)="showDialogToAdd()" label="Add"></button>
-      </div>
-  </ng-template>
+    <ng-template pTemplate="summary" let-rowData>
+        <div style="text-align:left">
+            <button type="button" pButton icon="fa-plus" (click)="showDialogToAdd()" label="Add"></button>
+        </div>
+    </ng-template>
   
 </p-table>
 
-<p-dialog header="MailOutput Details" [(visible)]="displayDialog" [responsive]="true" [contentStyle]="{'overflow':'visible'}"
-  showEffect="fade" [modal]="true" [width]="800" [autoAlign]="true">
-  <div class="ui-g ui-fluid" *ngIf="mailOutput">
-      <div class="ui-g-12">
-          <div class="ui-g-4">
-              <label for="number">Номер</label>
-          </div>
-          <div class="ui-g-8">
-              <input pInputText id="number" [(ngModel)]="mailOutput.number" />
-          </div>
-      </div>
-      <div class="ui-g-12">
-          <div class="ui-g-4">
-              <label for="receiver">Получатель</label>
-          </div>
-          <div class="ui-g-8">
-              <input pInputText id="receiver" [(ngModel)]="mailOutput.receiver" />
-          </div>
-      </div>
+<p-dialog [(visible)]="displayDialog" [contentStyle]="{'overflow':'visible'}"
+  showEffect="fade" [modal]="true" [width]="600" [autoAlign]="true" [responsive]="true">
+    <p-header>
+        Исх. документ № 
+        {{mailOutput.number}} от 
+        {{mailOutput.dated == null ? '-' : mailOutput.dated | date: 'dd.MM.y'}}
+    </p-header>
+    <div class="ui-g ui-fluid" *ngIf="mailOutput">
         <div class="ui-g-12">
             <div class="ui-g-4">
-                <label for="dated">Дата</label>
+                <label for="number"><b>Номер</b></label>
+                <input pInputText id="number" [(ngModel)]="mailOutput.number" 
+                    [disabled]="!disabledMailOutputNumber"/>
             </div>
-            <div class="ui-g-5">
-                    <p-calendar [(ngModel)]="mailOutput.dated" name="dated" placeholder="Дата" id="dated">
-                            <ng-template pTemplate="date" let-date>
-                                <span [ngStyle]="{backgroundColor: (date.day < 21 && date.day > 10) ? '#7cc67c' : 'inherit'}" style="border-radius:50%">{{date.day}}</span>
-                            </ng-template>
-                        </p-calendar>
-                    <!-- <p-calendar [(ngModel)]="mailOutput.dated" placeholder="Дата"
-                        [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru"
-                        showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy" id="dated">
-                    </p-calendar> -->
+            <div class="ui-g-4">
+                <label for="dated"><b>Дата</b></label>
+                <p-calendar [(ngModel)]="mailOutput.dated" placeholder="Дата" name="dated" 
+                    [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru"
+                    showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy" id="dated" 
+                    [disabled]="!disabledMailOutputNumber">
+                </p-calendar>
             </div>
-        </div> 
-      <div class="ui-g-12">
-          <div class="ui-g-4">
-              <label for="docTypeTitle">Документ</label>
-          </div>
-          <div class="ui-g-8">
-              <p-dropdown [options]="docTypes" [(ngModel)]="mailOutput.docType" 
-                name="docType" filter="false" optionLabel="title" 
-                [autoWidth]="false" placeholder="...">
-            </p-dropdown>
-          </div>
-      </div>
+            <div class="ui-g-4">
+                <label for="disabled-btn"></label>
+                <p-toggleButton [(ngModel)]="disabledMailOutputNumber" [style]="{'margin-top':'10px'}"
+                    offIcon="fa-edit" onIcon="fa-save" onLabel="Сохранить" offLabel="Редактир.">
+                </p-toggleButton>
+            </div>
+        </div>
+        <div class="ui-g-12">
+            <div class="ui-g-12">
+                <label for="receiver"><b>Получатель</b></label>
+                <input pInputText id="receiver" [(ngModel)]="mailOutput.receiver" />
+            </div>
+        </div>
+        <div class="ui-g-12">
+            <div class="ui-g-3">
+                <label for="docTypeTitle"><b>Тип документа</b></label>
+            </div>
+            <div class="ui-g-8">
+                <p-dropdown [options]="docTypes" [(ngModel)]="mailOutput.docType" 
+                    name="docType" filter="false" optionLabel="title" 
+                    [autoWidth]="false" placeholder="...">
+                </p-dropdown>
+            </div>
+        </div>
   </div>
-  <p-footer>
-      <div class="ui-dialog-buttonpane ui-helper-clearfix">
-        <button type="button" pButton icon="fa-trash" class="ui-button-danger" 
-            (click)="delete()" label="Удалить">
-        </button>
-        <button type="button" pButton icon="fa-close" class="ui-button-secondary" 
-            (click)="displayDialog=false" label="Закрыть">
-        </button>
-        <button type="button" pButton icon="fa-check" class="ui-button-success" 
-            (click)="save()" label="Сохранить">
-        </button>
-      </div>
-  </p-footer>
+    <p-footer>
+        <div class="ui-dialog-buttonpane ui-helper-clearfix">
+            <button type="button" pButton icon="fa-trash" class="ui-button-danger" 
+                (click)="delete()" label="Удалить">
+            </button>
+            <button type="button" pButton icon="fa-close" class="ui-button-secondary" 
+                (click)="displayDialog=false" label="Закрыть">
+            </button>
+            <button type="button" pButton icon="fa-check" class="ui-button-success" 
+                (click)="save()" label="Сохранить">
+            </button>
+        </div>
+    </p-footer>
 </p-dialog>
