--- a/crmapp/frontend/src/app/components/mail-output/mail-outputs/mail-outputs.component.html
+++ b/crmapp/frontend/src/app/components/mail-output/mail-outputs/mail-outputs.component.html
@@ -1,27 +1,42 @@
-<p-table [columns]="columns" [value]="outputs" selectionMode="single" [(selection)]="selectedOutput" 
-    (onRowSelect)="onRowSelect($event)" [paginator]="false" [rows]="15">
-    <ng-template pTemplate="header" let-columns>
-        <tr>
-            <th *ngFor="let col of columns">
-                {{col.header}}
-            </th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
-        <tr [pSelectableRow]="rowData">
-            <td *ngFor="let col of columns">
-                {{rowData[col.field]}}
-            </td>
-        </tr>
-    </ng-template>
-
-    <ng-template pTemplate="summary" let-rowData>
-        <div style="text-align:left">
-            <button type="button" pButton icon="fa-plus" (click)="showDialogToAdd()" label="Add"></button>
+<p-panel>
+    <p-header>
+        <div class="ui-helper-clearfix">
+            <span class="ui-panel-title" style="display:inline-block;margin-top:6px">
+                <h4><b>Исходящие документы</b></h4>
+            </span> 
+            <button pButton type="button" label="Добавить" style="margin-top:6px;float:right" 
+                (click)="showDialogToAdd()" icon="fa-plus">
+            </button>
         </div>
-    </ng-template>
-  
-</p-table>
+    </p-header>
+    <p-table [columns]="columns" [value]="outputs" selectionMode="single" [(selection)]="selectedOutput" 
+        (onRowSelect)="onRowSelect($event)" [paginator]="false" [rows]="15">
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let col of columns">
+                    {{col.header}}
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-columns="columns">
+            <tr [pSelectableRow]="rowData">
+                <td *ngFor="let col of columns">
+                    {{rowData[col.field]}}
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="summary" let-rowData>
+            
+        </ng-template>
+        <ng-template pTemplate="emptymessage" let-columns>
+            <tr>
+                <td [attr.colspan]="columns.length" style="text-align:center">
+                    No records found
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</p-panel>
 
 <p-dialog [(visible)]="displayDialog" [contentStyle]="{'overflow':'visible'}"
   showEffect="fade" [modal]="true" [width]="600" [autoAlign]="true" [responsive]="true">
@@ -59,17 +74,15 @@
             </div>
         </div>
         <div class="ui-g-12">
-            <div class="ui-g-3">
+            <div class="ui-g-12">
                 <label for="docTypeTitle"><b>Тип документа</b></label>
-            </div>
-            <div class="ui-g-8">
                 <p-dropdown [options]="docTypes" [(ngModel)]="mailOutput.docType" 
                     name="docType" filter="false" optionLabel="title" 
-                    [autoWidth]="false" placeholder="...">
+                    [autoWidth]="false" placeholder="Выберите тип документа">
                 </p-dropdown>
             </div>
         </div>
-  </div>
+    </div>
     <p-footer>
         <div class="ui-dialog-buttonpane ui-helper-clearfix">
             <button type="button" pButton icon="fa-trash" class="ui-button-danger" 
