FE: enabled table loading effect (in clients view)

--- a/crmapp/frontend/src/app/components/client/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/client/clients/clients.component.html
@@ -2,7 +2,7 @@
     [columns]="columns" [datasource]="clients" 
     [responsive]="true" [reorderableColumns]="true" 
     [rows]="0" [paginator]="false" [rowHover]="true" 
-    [loading]="false" [menuModel]="items" [sortField]="id" 
+    [loading]="true" [menuModel]="items" [sortField]="id" 
     [autoLayout]="true"
     >
 </app-dashboard-table>
