FE: enabled default loading in components

--- a/crmapp/frontend/src/app/components/person/persons/persons.component.html
+++ b/crmapp/frontend/src/app/components/person/persons/persons.component.html
@@ -2,5 +2,5 @@
     [columns]="columns" [datasource]="persons" 
     [responsive]="true" [reorderableColumns]="true" 
     [rows]="0" [paginator]="false" [rowHover]="true" 
-    [loading]="false" [menuModel]="items">
+    [loading]="true" [menuModel]="items">
 </app-dashboard-table>
