--- a/crmapp/frontend/src/app/components/document/documents/documents.component.html
+++ b/crmapp/frontend/src/app/components/document/documents/documents.component.html
@@ -88,7 +88,7 @@
   
   <p-table #dt [columns]="columns" [responsive]="true" (sortFunction)="customSort($event)" [customSort]="false"
       [value]="documents" [reorderableColumns]="true" [columnResizeMode]="expand" [autoLayout]="true"
-      [rows]="null" [rowHover]="true" [paginator]="false" [dataKey]="id" 
+      [rows]="null" [rowHover]="true" [paginator]="false" [dataKey]="id" [loading]="false"
       >
       <ng-template pTemplate="caption">
           <div style="text-align: right">
@@ -161,9 +161,7 @@
           <tr>
               <td [attr.colspan]="columns.length + 2">
                   <div class="ui-g-12 ui-md-12" >
-                      <!-- <div class="ui-g-12 ui-md-12"> -->
                           <p-card>
-                            <!-- <div class="ui-grid-row"> -->
                                 <div class="ui-helper-clearfix">
                                     <span class="ui-panel-title" style="display:inline-block;margin-top:4px">
                                         <h5><b>Договор:</b> {{rowData.agreementNumber}}</h5>
@@ -173,20 +171,7 @@
                                         [routerLink]="['/agreements', rowData.agreementId]">
                                     </button>
                                 </div>
-                                <!-- <div class="ui-grid-col-10" style="display:inline-block;margin-top:6px">
-                                    <b>Договор:</b> 
-                                    {{rowData.agreementNumber}}
-                                    
-                                </div>
-                                <div class="ui-grid-col-2">
-                                    <button pButton type="button" class="ui-button-info" 
-                                        icon="fa-arrow-circle-o-right" label="Перейти"
-                                        [routerLink]="['/agreements', rowData.agreementId]">
-                                    </button>
-                                </div> -->
-                              <!-- </div> -->
                             </p-card>
-                      <!-- </div> -->
                   </div>
               </td>
           </tr>
@@ -203,7 +188,3 @@
       </ng-template>
   </p-table>
 </p-panel>
-
-<ng-template #loadingStatus>
-  <!-- <app-loading-status enabled="true"></app-loading-status> -->
-</ng-template>
