FE: + [autoLayout] property

--- a/crmapp/frontend/src/app/components/agreement/agreements/agreements.component.html
+++ b/crmapp/frontend/src/app/components/agreement/agreements/agreements.component.html
@@ -2,5 +2,5 @@
     [columns]="columns" [datasource]="agreements" 
     [responsive]="true" [reorderableColumns]="true" 
     [rows]="0" [paginator]="false" [rowHover]="true" 
-    [loading]="true" [menuModel]="items">
+    [loading]="true" [menuModel]="items" [autoLayout]="true">
 </app-dashboard-table>
